fixed github authentication