@@ -1,5 +1,7 @@
 package org.metalib.papifly.fx.login.idapi;
 
+import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.Map;
 
 public record UserPrincipal(
@@ -11,7 +13,17 @@ public record UserPrincipal(
 ) {
 
     public UserPrincipal {
-        rawClaims = rawClaims == null ? Map.of() : Map.copyOf(rawClaims);
+        if (rawClaims == null || rawClaims.isEmpty()) {
+            rawClaims = Map.of();
+        } else {
+            Map<String, Object> copy = new LinkedHashMap<>();
+            rawClaims.forEach((key, value) -> {
+                if (key != null) {
+                    copy.put(key, value);
+                }
+            });
+            rawClaims = Collections.unmodifiableMap(copy);
+        }
     }
 
     public UserPrincipal(String subject, String displayName, String email, String avatarUrl) {
